Gridcolumn Editmode Visibility and disability enchantments

--- a/MudXComponents.Examples/Pages/Grids/OrdersGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/OrdersGrid.razor
@@ -36,7 +36,7 @@
                     xs="12" sm="12" md="2" lg="2" xl="2" xxl="2" />
 
         <GridColumn
-                    BindingType="string"
+                    BindingType="int"
                     Order="3"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
                     TModel="ORDERS" BindingField="@(nameof(ORDERS.OR_QUANTITY))" Label="Miktar" />
