--- a/MudXComponents/Components/MudGridX.razor
+++ b/MudXComponents/Components/MudGridX.razor
@@ -66,7 +66,13 @@
 
              <HeaderContent>
 
+                    
                  @{
+                     if (DetailGrid is not null && !SmartCrud)
+                     {
+                        <MudTh></MudTh>
+                     }
+
                      foreach (var item in GetComponentOf<ColumnBase<TModel>>())
                      {
                          <MudTh>
