--- a/MudXComponents/Components/MudXPage.razor
+++ b/MudXComponents/Components/MudXPage.razor
@@ -8,7 +8,8 @@
 
 
 <EditForm Model="@ViewModel" OnValidSubmit="async ()=> await SubmitClick()">
-    <MudDialog DefaultFocus="DefaultFocus.Element" OnBackdropClick="Cancel" >
+   
+    <MudDialog DefaultFocus="DefaultFocus.Element" OnBackdropClick="Cancel">
         <DialogContent>
 
             @{
@@ -18,31 +19,36 @@
                     <ValidationSummary />
                 }
             }
-        <MudContainer Style="max-height: 80vh; overflow-y: auto ">
-            @{
+            <MudContainer Style="max-height: 80vh; overflow-y: auto ">
+                @{
 
-                <MudGrid Justify="Justify.FlexStart" Spacing="0">
+                    <MudGrid Justify="Justify.FlexStart" Spacing="0">
 
-                    @{
-                        if (Components is not null)
-                        {
-                            @foreach (var component in Components.Where(x => x is not IButton))
+                        @{
+                            if (Components is not null)
                             {
-                                <MudItem xs="component.xs"
-                                         sm="component.sm"
-                                         md="component.md"
-                                         lg="component.lg"
-                                         xl="component.xl"
-                                         xxl="component.xxl">
-                                    @*Rendering is done Here*@
-                                    @component.RenderComponent(ViewModel, ComponentTypes.Form)
-                                </MudItem>
+                                @foreach (var component in Components.Where(x => x is not IButton))
+                                {
+                                    
+                                    <MudItem xs="component.xs"
+                                             sm="component.sm"
+                                             md="component.md"
+                                             lg="component.lg"
+                                             xl="component.xl"
+                                             xxl="component.xxl">
+                                        @{
+                                            if (component.VisibleOnEdit)
+                                            {
+                                               @component.RenderComponent(ViewModel, ComponentTypes.Form)
+                                            }
+                                        }
+                                    </MudItem>
+                                }
                             }
                         }
-                    }
 
-                </MudGrid>
-               
+                    </MudGrid>
+
                     if (SmartCrud)
                     {
                         <CascadingValue Value="ViewModel" Name="@(nameof(MudGridX<TModel>.ParentContext))">
@@ -54,16 +60,16 @@
                             </CascadingValue>
                         </CascadingValue>
                     }
-                
 
-            }
-        </MudContainer>
+
+                }
+            </MudContainer>
 
 
         </DialogContent>
         <DialogActions>
             <MudButton OnClick="Cancel">@CancelText</MudButton>
-            <MudButton Color="Color.Success" Variant="Variant.Filled" ButtonType="MudBlazor.ButtonType.Submit">@SubmitText</MudButton>
+            <MudButton Color="Color.Success" Variant="Variant.Filled" ButtonType="MudBlazor.ButtonType.Submit" >@SubmitText</MudButton>
         </DialogActions>
     </MudDialog>
 </EditForm>
