--- a/MudXComponents/Components/MudGridX.razor
+++ b/MudXComponents/Components/MudGridX.razor
@@ -50,7 +50,9 @@
  
 
          <MudTable
-                   FixedHeader="true"
+                   Height="@Height"
+                   FixedFooter="@FixedFooter"
+                   FixedHeader="@FixedHeader"
                    Elevation="0"
                    Items="@DataSource"
                    Dense="true"
