--- a/MudXComponents.Examples/_Imports.razor
+++ b/MudXComponents.Examples/_Imports.razor
@@ -14,3 +14,4 @@
 @using MudXComponents.Shared;
 @using MudXComponents.Enums;
 @using MudXComponents.Extensions;
+@using System.Collections.ObjectModel
