--- a/MudXComponents.Examples/_Imports.razor
+++ b/MudXComponents.Examples/_Imports.razor
@@ -14,4 +14,5 @@
 @using MudXComponents.Shared;
 @using MudXComponents.Enums;
 @using MudXComponents.Extensions;
+@using MudXComponents.Args;
 @using System.Collections.ObjectModel
