--- a/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
@@ -5,7 +5,7 @@
 @code{}
 
 <MudGridX 
-        SmartCrud="false"
+        SmartCrud="true"
         EnableModelValidation="true"
         EnableSearch="true"
         EnablePagination="true"
@@ -122,7 +122,7 @@
     <DetailGrid>
         <MudTabs Class="pt-5" Color="Color.Info" Style="width:100%">
             <MudTabPanel Text="Orders">
-                <OrdersGrid />
+                <OrdersGrid  />
             </MudTabPanel>
             <MudTabPanel Text="Transactions">
                 <TransactionsGrid />
