--- a/MudXComponents/Components/MudGridX.razor
+++ b/MudXComponents/Components/MudGridX.razor
@@ -146,7 +146,7 @@
                         <tr style="display:table-row!important;overflow:hidden">
                             <td style="display:table-cell!important;overflow:hidden" colspan="12">
                                 <CascadingValue Value="context" Name="@(nameof(MudGridX<TModel>.ParentContext))">
-                                    @DetailGrid
+                                    @DetailGrid(context)
                                 </CascadingValue>
                             </td>
                         </tr>
