--- a/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
+++ b/MudXComponents.Examples/Pages/Grids/SimpleGrid.razor
@@ -42,7 +42,7 @@
                     BindingField="@(nameof(USERS.U_ROWID))"
                     Label="rowid" />
 
-        <GridColumn BindingType="string"
+        <GridColumn BindingType="string" Class="mt-5"
                     Order="2"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
                     TModel="USERS"
@@ -53,7 +53,7 @@
                     Order="3"
                     xs="12" sm="12" md="2" lg="2" xl="2" xxl="2" />
 
-        <GridColumn BindingType="string"
+        <GridColumn BindingType="string" Class="mt-5"
                     Order="4"
                     xs="12" sm="12" md="12" lg="5" xl="5" xxl="5"
                     TModel="USERS" BindingField="@(nameof(USERS.U_SURNAME))" Label="Surname" />
@@ -72,7 +72,7 @@
                     Label="Country" />
         <GridSpacer TModel="USERS"
                     Order="3"
-                    xs="12" sm="12" md="12" lg="1" xl="1" xxl="1" />
+                    xs="12" sm="12" md="12" lg="2" xl="2" xxl="2" />
 
         <GridSelect Class="mt-5"
                     Order="6"
